[package]
name = "ymlctx"
version = "0.1.2"
authors = ["Alex Yang <aleozlx@gmail.com>"]
description = "YAML configuration overlaying system that natively integrates into operationalized tasks"
license = "MIT"

[features]
default = []
topyobject = ["pyo3"]

[dependencies]
yaml-rust = "^0.4"
rpds = "^0.5.0"
pyo3 = { version = "0.5", optional = true }
